--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,53 @@
 html, body {
     font-family: "Kodchasan", sans-serif;
+    font-size: 18px;
     color: #000;
 }
+
 .wrapper {
     min-height: 100%;
     width: 100%;
     overflow: hidden;
 }
+
 .container {
     max-width: 1260px;
     padding: 0 15px;
     margin: 0 auto;
 }
+
+.honey-image-1 {
+    position: absolute;
+    left: 0;
+    top: 117px;
+    height: 322px;
+    width: auto;
+    z-index: 3;
+}
+
+/* ############################################################## */
+.button {
+    font-size: 18px;
+    height: 65px;
+    line-height: 160%;
+    font-weight: bold;
+}
+
+.btn-black {
+    padding: 18px 50px;
+    width: 180px;
+    color: #fff;
+    background-color: #000;
+    margin-right: 30px;
+}
+
+.btn-black-transparent {
+    color: #000;
+    border: 3px solid #000;
+    padding: 18px 50px;
+    width: 209px;
+}
+
 /* ############################################################## */
 .header__top-inner {
     display: flex;
@@ -19,41 +55,46 @@ html, body {
     align-items: center;
     padding: 30px 0;
 }
-.header__logo {
-}
-.logo {
-}
-.header__nav {
-}
+
+.header__logo {}
+
+.logo {}
+
+.header__nav {}
+
 .header__nav-list {
     display: flex;
 }
+
 .header__nav-item {
     margin-right: 40px;
 }
+
 .header__nav-item:last-child {
     margin-right: 0;
 }
+
 .header__nav-item:first-child {
     font-weight: bold;
 }
+
 .header__nav-link {
     white-space: nowrap;
 }
+
 /* ############################################################## */
 .header__body {
     padding: 0 15px;
 }
+
 .header__container {
     max-width: 1500px;
     padding: 0 15px;
     margin: 0 auto;
-    background: linear-gradient(
-        to right top,
-        #FF9D2D,  
-        #FFD877  
-    );
-    background-attachment: fixed; 
+    background: linear-gradient(to right top,
+            #FF9D2D,
+            #FFD877);
+    background-attachment: fixed;
     border-radius: 30px;
     position: relative;
     height: 874px;
@@ -63,7 +104,7 @@ html, body {
     content: '';
     position: absolute;
     background: url('../img/bg-logo.svg') no-repeat;
-    width: calc(100% - 89px - 174px); 
+    width: calc(100% - 89px - 174px);
     max-width: 1400px;
     height: 611px;
     right: 13px;
@@ -82,6 +123,57 @@ html, body {
         transform: translate(-50%, -50%);
     }
 }
+
 .header__main {}
+
 .header__content {
+    max-width: 1260px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.header__buttons {
+    display: flex;
+    position: absolute;
+    bottom: 147px;
+}
+
+.bee-line-img {
+    position: absolute;
+    top: 445px;
+    height: 129px;
+    z-index: 5;
+}
+
+.main-img {
+    position: absolute;
+    height: 650px;
+    z-index: 5;
+    right: 10px;
+    top: 124px;
+}
+.finger-licking-honey {
+    font-family: "Kodchasan", sans-serif;
+    font-size: 100px;
+    font-weight: bold;
+    color: #0b0b0b;;
+}
+
+.finger-licking-honey-1 {
+    position: absolute;
+    top: 182px;
+    left: 177px;
+    z-index: 5;
+}
+.finger-licking-honey-2 {
+    position: absolute;
+    top: 322px;
+    left: 275px;
+    z-index: 5;
+}
+.finger-licking-honey-3 {
+    position: absolute;
+    top: 462px;
+    left: 471px;
+    z-index: 5;
 }
