--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ html, body {
     height: 65px;
     line-height: 160%;
     font-weight: bold;
+    z-index: 5;
+    white-space: nowrap;
 }
 
 .btn-black {
@@ -45,7 +47,14 @@ html, body {
     color: #000;
     border: 3px solid #000;
     padding: 18px 50px;
-    width: 209px;
+}
+
+.btn-orange {
+    padding: 15px 40px;
+    width: 184px;
+    height: 59px;
+    color: #fff;
+    background-color: #E58311;
 }
 
 /* ############################################################## */
@@ -54,9 +63,15 @@ html, body {
     justify-content: space-between;
     align-items: center;
     padding: 30px 0;
+    max-width: 1500px;
+    padding: 0 15px;
+    margin: 0 auto;
+    height: 65px;
 }
 
-.header__logo {}
+.header__logo {
+    margin-left: 100px;
+}
 
 .logo {}
 
@@ -152,11 +167,13 @@ html, body {
     right: 10px;
     top: 124px;
 }
+
 .finger-licking-honey {
     font-family: "Kodchasan", sans-serif;
     font-size: 100px;
     font-weight: bold;
-    color: #0b0b0b;;
+    color: #0b0b0b;
+    ;
 }
 
 .finger-licking-honey-1 {
@@ -165,15 +182,68 @@ html, body {
     left: 177px;
     z-index: 5;
 }
+
 .finger-licking-honey-2 {
     position: absolute;
     top: 322px;
     left: 275px;
     z-index: 5;
 }
+
 .finger-licking-honey-3 {
     position: absolute;
     top: 462px;
     left: 471px;
     z-index: 5;
+}
+
+/* ############################################################## */
+.trusted-shops {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 160%;
+    color: #000;
+    margin-top: 121px;
+}
+
+.partners {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* ############################################################## */
+
+.main-content {
+    margin-top: 130px;
+    max-width: 1467px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+.content-item {
+    display: flex;
+    place-items: center;
+}
+
+.content-item img {
+    height: 784px;
+}
+
+.content-text {
+    display: grid;
+    height: 374px;
+    width: 548px;
+}
+
+.content-text h4 {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 145%;
+}
+
+.content-text p {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 160%;
+    opacity: 0.7;
 }
